add translate to bg, cs, da, de, el, es, et, fi, fr, he, hr, hu, is, ja, ko, nl, no, pl, pt, ro, ru, sk, sv, tr, uk, zh

--- a/ServiceMenus/reimage-convert-rotate.desktop
+++ b/ServiceMenus/reimage-convert-rotate.desktop
@@ -26,7 +26,34 @@ Name=ReImage convert and rotate service menu
 TryExec=reimage-kdialog
 Type=Service
 X-KDE-Submenu=ReImage - Convert and rotate
+X-KDE-Submenu[bg]=ReImage - Конвертиране и завъртане
+X-KDE-Submenu[cs]=ReImage - Konverze a otočení
+X-KDE-Submenu[da]=ReImage - Konverter og roter
+X-KDE-Submenu[de]=ReImage - Konvertieren und Drehen
+X-KDE-Submenu[el]=ReImage - Μετατροπή και περιστροφή
+X-KDE-Submenu[es]=ReImage - Convertir y rotar
+X-KDE-Submenu[et]=ReImage - Konverteeri ja pööra
+X-KDE-Submenu[fi]=ReImage - Muunna ja kierrä
+X-KDE-Submenu[fr]=ReImage - Convertir et faire pivoter
+X-KDE-Submenu[he]=ReImage - המרה וסיבוב
+X-KDE-Submenu[hr]=ReImage - Pretvori i rotiraj
+X-KDE-Submenu[hu]=ReImage - Átalakítás és forgatás
+X-KDE-Submenu[is]=ReImage - Umbreyta og snúa
 X-KDE-Submenu[it]=ReImage - Conversione e rotazione
+X-KDE-Submenu[ja]=ReImage - 変換と回転
+X-KDE-Submenu[ko]=ReImage - 변환 및 회전
+X-KDE-Submenu[nl]=ReImage - Converteren en roteren
+X-KDE-Submenu[no]=ReImage - Konverter og roter
+X-KDE-Submenu[pl]=ReImage - Konwertuj i obracaj
+X-KDE-Submenu[pt]=ReImage - Converter e girar
+X-KDE-Submenu[ro]=ReImage - Conversie și rotire
+X-KDE-Submenu[ru]=ReImage - Конвертировать и поворачивать
+X-KDE-Submenu[sk]=ReImage - Konvertovať a otočiť
+X-KDE-Submenu[sv]=ReImage - Konvertera och rotera
+X-KDE-Submenu[tr]=ReImage - Dönüştür ve döndür
+X-KDE-Submenu[uk]=ReImage - Конвертувати та обертати
+X-KDE-Submenu[zh]=ReImage - 转换和旋转
+
 
 ################################################################################
 
@@ -34,49 +61,265 @@ X-KDE-Submenu[it]=ReImage - Conversione e rotazione
 Exec=reimage-kdialog convert avif %F
 Icon=image-avif
 Name=Convert to AVIF
+Name[bg]=Конвертиране в AVIF
+Name[cs]=Převést do AVIF
+Name[da]=Konverter til AVIF
+Name[de]=In AVIF konvertieren
+Name[el]=Μετατροπή σε AVIF
+Name[es]=Convertir a AVIF
+Name[et]=Konverteeri AVIF-iks
+Name[fi]=Muunna AVIF:ksi
+Name[fr]=Convertir en AVIF
+Name[he]=המרה ל-AVIF
+Name[hr]=Pretvori u AVIF
+Name[hu]=Átalakítás AVIF formátumba
+Name[is]=Breyta í AVIF
 Name[it]=Converti in AVIF
+Name[ja]=AVIF に変換
+Name[ko]=AVIF로 변환
+Name[nl]=Converteren naar AVIF
+Name[no]=Konverter til AVIF
+Name[pl]=Konwertuj do AVIF
+Name[pt]=Converter para AVIF
+Name[ro]=Conversie la AVIF
+Name[ru]=Конвертировать в AVIF
+Name[sk]=Konvertovať do AVIF
+Name[sv]=Konvertera till AVIF
+Name[tr]=AVIF'e dönüştür
+Name[uk]=Перетворити в AVIF
+Name[zh]=转换为 AVIF
+
 
 [Desktop Action gif]
 Exec=reimage-kdialog convert gif %F
 Icon=image-gif
 Name=Convert to GIF
+Name[bg]=Конвертиране в GIF
+Name[cs]=Převést na GIF
+Name[da]=Konverter til GIF
+Name[de]=In GIF konvertieren
+Name[el]=Μετατροπή σε GIF
+Name[es]=Convertir a GIF
+Name[et]=Konverteeri GIF-i
+Name[fi]=Muunna GIF-muotoon
+Name[fr]=Convertir en GIF
+Name[he]=המרה ל-GIF
+Name[hr]=Pretvori u GIF
+Name[hu]=Konvertálás GIF-re
+Name[is]=Breyta í GIF
 Name[it]=Converti in GIF
+Name[ja]=GIFに変換
+Name[ko]=GIF로 변환
+Name[nl]=Converteren naar GIF
+Name[no]=Konverter til GIF
+Name[pl]=Konwertuj do GIF
+Name[pt]=Converter para GIF
+Name[ro]=Conversie în GIF
+Name[ru]=Преобразовать в GIF
+Name[sk]=Konvertovať na GIF
+Name[sv]=Konvertera till GIF
+Name[tr]=GIF'e dönüştür
+Name[uk]=Перетворити у GIF
+Name[zh]=转换为GIF
+
 
 [Desktop Action heic]
 Exec=reimage-kdialog convert heic %F
 Icon=image-heic
 Name=Convert to HEIF
+Name[bg]=Конвертиране в HEIF
+Name[cs]=Převést na HEIF
+Name[da]=Konverter til HEIF
+Name[de]=In HEIF konvertieren
+Name[el]=Μετατροπή σε HEIF
+Name[es]=Convertir a HEIF
+Name[et]=Konverteeri HEIF-iks
+Name[fi]=Muunna HEIF:ksi
+Name[fr]=Convertir en HEIF
+Name[he]=המרה ל-HEIF
+Name[hr]=Pretvori u HEIF
+Name[hu]=Konvertálás HEIF formátumba
+Name[is]=Breyta í HEIF
 Name[it]=Converti in HEIF
+Name[ja]=HEIFに変換
+Name[ko]=HEIF로 변환
+Name[nl]=Converteren naar HEIF
+Name[no]=Konverter til HEIF
+Name[pl]=Konwertuj do HEIF
+Name[pt]=Converter para HEIF
+Name[ro]=Conversie la HEIF
+Name[ru]=Преобразовать в HEIF
+Name[sk]=Konvertovať na HEIF
+Name[sv]=Konvertera till HEIF
+Name[tr]=HEIF'e dönüştür
+Name[uk]=Конвертувати в HEIF
+Name[zh]=转换为HEIF
+
 
 [Desktop Action jpeg]
 Exec=reimage-kdialog convert jpg %F
 Icon=image-jpeg
 Name=Convert to JPEG
+Name[bg]=Конвертиране в JPEG
+Name[cs]=Převést na JPEG
+Name[da]=Konverter til JPEG
+Name[de]=In JPEG konvertieren
+Name[el]=Μετατροπή σε JPEG
+Name[es]=Convertir a JPEG
+Name[et]=Konverteeri JPEG-ks
+Name[fi]=Muunna JPEG:ksi
+Name[fr]=Convertir en JPEG
+Name[he]=המרה ל-JPEG
+Name[hr]=Pretvoriti u JPEG
+Name[hu]=Konvertálás JPEG formátumra
+Name[is]=Breyta í JPEG
 Name[it]=Converti in JPEG
+Name[ja]=JPEGに変換
+Name[ko]=JPEG로 변환
+Name[nl]=Converteren naar JPEG
+Name[no]=Konverter til JPEG
+Name[pl]=Konwertuj do JPEG
+Name[pt]=Converter para JPEG
+Name[ro]=Conversie în JPEG
+Name[ru]=Преобразовать в JPEG
+Name[sk]=Konvertovať do JPEG
+Name[sv]=Konvertera till JPEG
+Name[tr]=JPEG'e dönüştür
+Name[uk]=Конвертувати в JPEG
+Name[zh]=转换为JPEG
+
 
 [Desktop Action jxl]
 Exec=reimage-kdialog convert jxl %F
 Icon=image-jxl
 Name=Convert to JXL
+Name[bg]=Конвертиране в JXL
+Name[cs]=Převést do JXL
+Name[da]=Konverter til JXL
+Name[de]=In JXL konvertieren
+Name[el]=Μετατροπή σε JXL
+Name[es]=Convertir a JXL
+Name[et]=Konverteeri JXL-iks
+Name[fi]=Muunna JXL:ksi
+Name[fr]=Convertir en JXL
+Name[he]=המרה ל-JXL
+Name[hr]=Pretvori u JXL
+Name[hu]=Konvertálás JXL-re
+Name[is]=Breyta í JXL
 Name[it]=Converti in JXL
+Name[ja]=JXL に変換
+Name[ko]=JXL로 변환
+Name[nl]=Converteren naar JXL
+Name[no]=Konverter til JXL
+Name[pl]=Konwertuj do JXL
+Name[pt]=Converter para JXL
+Name[ro]=Conversie în JXL
+Name[ru]=Конвертировать в JXL
+Name[sk]=Konvertovať do JXL
+Name[sv]=Konvertera till JXL
+Name[tr]=JXL'e dönüştür
+Name[uk]=Перетворити в JXL
+Name[zh]=转换为JXL
+
 
 [Desktop Action png]
 Exec=reimage-kdialog convert png %F
 Icon=image-png
 Name=Convert to PNG
+Name[bg]=Преобразуване в PNG
+Name[cs]=Převést do PNG
+Name[da]=Konverter til PNG
+Name[de]=In PNG konvertieren
+Name[el]=Μετατροπή σε PNG
+Name[es]=Convertir a PNG
+Name[et]=Konverteeri PNG-ks
+Name[fi]=Muunna PNG-muotoon
+Name[fr]=Convertir en PNG
+Name[he]=המרה ל-PNG
+Name[hr]=Pretvoriti u PNG
+Name[hu]=Átalakítás PNG-re
+Name[is]=Breyta í PNG
 Name[it]=Converti in PNG
+Name[ja]=PNG に変換
+Name[ko]=PNG로 변환
+Name[nl]=Converteren naar PNG
+Name[no]=Konverter til PNG
+Name[pl]=Konwertuj na PNG
+Name[pt]=Converter para PNG
+Name[ro]=Conversie în PNG
+Name[ru]=Конвертировать в PNG
+Name[sk]=Konvertovať do PNG
+Name[sv]=Konvertera till PNG
+Name[tr]=PNG'ye dönüştür
+Name[uk]=Перетворити у PNG
+Name[zh]=转换为PNG
+
 
 [Desktop Action tiff]
 Exec=reimage-kdialog convert tif %F
 Icon=image-tiff
 Name=Convert to TIFF
+Name[bg]=Преобразуване в TIFF
+Name[cs]=Převést do TIFF
+Name[da]=Konverter til TIFF
+Name[de]=In TIFF umwandeln
+Name[el]=Μετατροπή σε TIFF
+Name[es]=Convertir a TIFF
+Name[et]=Konverteeri TIFF-iks
+Name[fi]=Muunna TIFF:ksi
+Name[fr]=Convertir en TIFF
+Name[he]=המרה ל-TIFF
+Name[hr]=Pretvori u TIFF
+Name[hu]=Konvertálás TIFF formátumba
+Name[is]=Breyta í TIFF
 Name[it]=Converti in TIFF
+Name[ja]=TIFFに変換
+Name[ko]=TIFF로 변환
+Name[nl]=Converteren naar TIFF
+Name[no]=Konverter til TIFF
+Name[pl]=Konwertuj na TIFF
+Name[pt]=Converter para TIFF
+Name[ro]=Conversie în TIFF
+Name[ru]=Преобразовать в TIFF
+Name[sk]=Konvertovať do TIFF
+Name[sv]=Konvertera till TIFF
+Name[tr]=TIFF'e dönüştür
+Name[uk]=Конвертувати у TIFF
+Name[zh]=转换为TIFF
+
 
 [Desktop Action webp]
 Exec=reimage-kdialog convert webp %F
 Icon=image-webp
 Name=Convert to WEBP
+Name[bg]=Конвертиране в WEBP
+Name[cs]=Převést do WEBP
+Name[da]=Konverter til WEBP
+Name[de]=In WEBP konvertieren
+Name[el]=Μετατροπή σε WEBP
+Name[es]=Convertir a WEBP
+Name[et]=Konverteeri WEBP-ks
+Name[fi]=Muunna WEBP-muotoon
+Name[fr]=Convertir en WEBP
+Name[he]=המרה ל-WEBP
+Name[hr]=Pretvori u WEBP
+Name[hu]=Konvertálás WEBP formátumba
+Name[is]=Breyta í WEBP
 Name[it]=Converti in WEBP
+Name[ja]=WEBPに変換
+Name[ko]=WEBP로 변환
+Name[nl]=Converteren naar WEBP
+Name[no]=Konverter til WEBP
+Name[pl]=Konwertuj do WEBP
+Name[pt]=Converter para WEBP
+Name[ro]=Conversie în WEBP
+Name[ru]=Конвертировать в WEBP
+Name[sk]=Konvertovať do WEBP
+Name[sv]=Konvertera till WEBP
+Name[tr]=WEBP'ye dönüştür
+Name[uk]=Конвертувати у WEBP
+Name[zh]=转换为WEBP
+
 
 ################################################################################
 
@@ -84,13 +327,67 @@ Name[it]=Converti in WEBP
 Exec=reimage-kdialog convert pdf %F
 Icon=application-pdf
 Name=Convert to PDF
+Name[bg]=Конвертиране в PDF
+Name[cs]=Převést do PDF
+Name[da]=Konverter til PDF
+Name[de]=In PDF konvertieren
+Name[el]=Μετατροπή σε PDF
+Name[es]=Convertir a PDF
+Name[et]=Konverteeri PDF-iks
+Name[fi]=Muunna PDF:ksi
+Name[fr]=Convertir en PDF
+Name[he]=המרה ל-PDF
+Name[hr]=Pretvori u PDF
+Name[hu]=PDF-re konvertálás
+Name[is]=Breyta í PDF
 Name[it]=Converti in PDF
+Name[ja]=PDFに変換
+Name[ko]=PDF로 변환
+Name[nl]=Converteren naar PDF
+Name[no]=Konverter til PDF
+Name[pl]=Konwertuj do PDF
+Name[pt]=Converter para PDF
+Name[ro]=Conversie în PDF
+Name[ru]=Преобразовать в PDF
+Name[sk]=Konvertovať do PDF
+Name[sv]=Konvertera till PDF
+Name[tr]=PDF'ye dönüştür
+Name[uk]=Перетворити у PDF
+Name[zh]=转换为PDF
+
 
 [Desktop Action pdfa]
 Exec=reimage-kdialog convert pdfa %F
 Icon=application-pdf
 Name=Convert to PDF/A-1
+Name[bg]=Преобразуване в PDF/A-1
+Name[cs]=Převést do PDF/A-1
+Name[da]=Konverter til PDF/A-1
+Name[de]=In PDF/A-1 konvertieren
+Name[el]=Μετατροπή σε PDF/A-1
+Name[es]=Convertir a PDF/A-1
+Name[et]=Konverteeri PDF/A-1-ks
+Name[fi]=Muunna PDF/A-1:ksi
+Name[fr]=Convertir en PDF/A-1
+Name[he]=המרה ל-PDF/A-1
+Name[hr]=Pretvori u PDF/A-1
+Name[hu]=PDF/A-1-re konvertálás
+Name[is]=Breyta í PDF/A-1
 Name[it]=Converti in PDF/A-1
+Name[ja]=PDF/A-1に変換
+Name[ko]=PDF/A-1로 변환
+Name[nl]=Converteren naar PDF/A-1
+Name[no]=Konverter til PDF/A-1
+Name[pl]=Konwertuj do PDF/A-1
+Name[pt]=Converter para PDF/A-1
+Name[ro]=Conversie în PDF/A-1
+Name[ru]=Преобразовать в PDF/A-1
+Name[sk]=Konvertovať do PDF/A-1
+Name[sv]=Konvertera till PDF/A-1
+Name[tr]=PDF/A-1'e dönüştür
+Name[uk]=Перетворити у PDF/A-1
+Name[zh]=转换为PDF/A-1
+
 
 ################################################################################
 
@@ -98,25 +395,133 @@ Name[it]=Converti in PDF/A-1
 Exec=reimage-kdialog favicons all %F
 Icon=image-ico
 Name=Generate favicons
+Name[bg]=Генериране на икони за фаворити
+Name[cs]=Vytvořit favikony
+Name[da]=Generer favikoner
+Name[de]=Favicons generieren
+Name[el]=Δημιουργία favicons
+Name[es]=Generar favicons
+Name[et]=Favikonide loomine
+Name[fi]=Luo faviconit
+Name[fr]=Générer des favicons
+Name[he]=צור פייביקונים
+Name[hr]=Generiranje favikona
+Name[hu]=Favikonok létrehozása
+Name[is]=Búa til favicons
 Name[it]=Genera favicons
+Name[ja]=ファビコンを生成する
+Name[ko]=파비콘 생성
+Name[nl]=Favicons genereren
+Name[no]=Generer favikoner
+Name[pl]=Generowanie favicon
+Name[pt]=Gerar favicons
+Name[ro]=Generare favicoane
+Name[ru]=Создать фавиконы
+Name[sk]=Generovať favikony
+Name[sv]=Generera favikoner
+Name[tr]=Favicon oluştur
+Name[uk]=Генерація фавіконів
+Name[zh]=生成网站图标
+
 
 [Desktop Action base64]
 Exec=for i in %F; do cat "$i" | base64 -w0 > "$i".base64; done
 Icon=text-plain
 Name=Convert to Base64
+Name[bg]=Конвертиране в Base64
+Name[cs]=Převést na Base64
+Name[da]=Konverter til Base64
+Name[de]=In Base64 konvertieren
+Name[el]=Μετατροπή σε Base64
+Name[es]=Convertir a Base64
+Name[et]=Konverteeri Base64-ks
+Name[fi]=Muunna Base64:ksi
+Name[fr]=Convertir en Base64
+Name[he]=המרה ל-Base64
+Name[hr]=Pretvori u Base64
+Name[hu]=Konvertálás Base64 formátumba
+Name[is]=Breyta í Base64
 Name[it]=Converti in Base64
+Name[ja]=Base64 に変換
+Name[ko]=Base64로 변환
+Name[nl]=Converteren naar Base64
+Name[no]=Konverter til Base64
+Name[pl]=Konwertuj do Base64
+Name[pt]=Converter para Base64
+Name[ro]=Conversie în Base64
+Name[ru]=Преобразовать в Base64
+Name[sk]=Konvertovať do Base64
+Name[sv]=Konvertera till Base64
+Name[tr]=Base64'e dönüştür
+Name[uk]=Перетворити в Base64
+Name[zh]=转换为Base64
+
 
 [Desktop Action convert_custom]
 Exec=reimage-kdialog convert custom %F
 Icon=image
 Name=Convert to format ...
+Name[bg]=Преобразуване във формат...
+Name[cs]=Převést do formátu...
+Name[da]=Konverter til format...
+Name[de]=In Format konvertieren...
+Name[el]=Μετατροπή σε μορφή...
+Name[es]=Convertir a formato...
+Name[et]=Konverteeri vormingusse...
+Name[fi]=Muunna muotoon...
+Name[fr]=Convertir au format...
+Name[he]=המרה לפורמט...
+Name[hr]=Pretvori u format...
+Name[hu]=Átalakítás formátumba...
+Name[is]=Breyta í snið...
 Name[it]=Formato personalizzato ...
+Name[ja]=形式に変換...
+Name[ko]=형식으로 변환...
+Name[nl]=Converteren naar formaat...
+Name[no]=Konverter til format...
+Name[pl]=Konwertuj do formatu...
+Name[pt]=Converter para formato...
+Name[ro]=Conversie la format...
+Name[ru]=Преобразовать в формат...
+Name[sk]=Konvertovať do formátu...
+Name[sv]=Konvertera till format...
+Name[tr]=Formata dönüştür...
+Name[uk]=Перетворити у формат...
+Name[zh]=转换为格式...
+
 
 [Desktop Action formats]
 Exec=reimage-kdialog convert formats
 Icon=view-list-text
 Name=Formats list
+Name[bg]=Списък с формати
+Name[cs]=Seznam formátů
+Name[da]=Formatliste
+Name[de]=Formate Liste
+Name[el]=Λίστα μορφών
+Name[es]=Lista de formatos
+Name[et]=Formaatide loend
+Name[fi]=Muotoluettelo
+Name[fr]=Liste des formats
+Name[he]=רשימת פורמטים
+Name[hr]=Popis formata
+Name[hu]=Formátumok listája
+Name[is]=Sniðlisti
 Name[it]=Elenco formati
+Name[ja]=フォーマットリスト
+Name[ko]=포맷 목록
+Name[nl]=Formatenlijst
+Name[no]=Formatliste
+Name[pl]=Lista formatów
+Name[pt]=Lista de formatos
+Name[ro]=Listă de formate
+Name[ru]=Список форматов
+Name[sk]=Zoznam formátov
+Name[sv]=Formatlista
+Name[tr]=Biçim listesi
+Name[uk]=Список форматів
+Name[zh]=格式列表
+
 
 ################################################################################
 
@@ -124,31 +529,166 @@ Name[it]=Elenco formati
 Exec=reimage-kdialog rotate 90 %F
 Icon=image-rotate-right-symbolic
 Name=Rotate 90°
+Name[bg]=Завъртане на 90°
+Name[cs]=Otočit o 90°
+Name[da]=Drej 90°
+Name[de]=90° drehen
+Name[el]=Περιστροφή 90°
+Name[es]=Girar 90°
+Name[et]=Pöörake 90°
+Name[fi]=Kierrä 90°
+Name[fr]=Pivoter de 90°
+Name[he]=סובב 90°
+Name[hr]=Rotiraj 90°
+Name[hu]=90°-os forgatás
+Name[is]=Snúa 90°
 Name[it]=Ruota di 90°
+Name[ja]=90°回転
+Name[ko]=90도 회전
+Name[nl]=90° draaien
+Name[no]=Roter 90°
+Name[pl]=Obróć o 90°
+Name[pt]=Girar 90°
+Name[ro]=Rotește 90°
+Name[ru]=Повернуть на 90°
+Name[sk]=Otočiť o 90°
+Name[sv]=Rotera 90°
+Name[tr]=90° döndür
+Name[uk]=Повернути на 90°
+Name[zh]=旋转90°
+
 
 [Desktop Action rotate_180]
 Exec=reimage-kdialog rotate 180 %F
 Icon=image-rotate-right-symbolic
 Name=Rotate 180°
+Name[bg]=Завъртане на 180°
+Name[cs]=Otočit o 180°
+Name[da]=Roter 180°
+Name[de]=180° drehen
+Name[el]=Περιστροφή 180°
+Name[es]=Girar 180°
+Name[et]=Pööra 180°
+Name[fi]=Kierrä 180°
+Name[fr]=Pivoter de 180°
+Name[he]=סובב 180°
+Name[hr]=Rotiraj za 180°
+Name[hu]=180°-os elforgatás
+Name[is]=Snúa 180°
 Name[it]=Ruota di 180°
+Name[ja]=180°回転
+Name[ko]=180° 회전
+Name[nl]=180° draaien
+Name[no]=Roter 180°
+Name[pl]=Obróć o 180°
+Name[pt]=Girar 180°
+Name[ro]=Rotește 180°
+Name[ru]=Повернуть на 180°
+Name[sk]=Otočiť o 180°
+Name[sv]=Rotera 180°
+Name[tr]=180° döndür
+Name[uk]=Повернути на 180°
+Name[zh]=旋转 180°
+
 
 [Desktop Action rotate_270]
 Exec=reimage-kdialog rotate 270 %F
 Icon=image-rotate-left-symbolic
 Name=Rotate (-90°)
+Name[bg]=Завърти (-90°)
+Name[cs]=Otočit (-90°)
+Name[da]=Roter (-90°)
+Name[de]=Drehen (-90°)
+Name[el]=Περιστροφή (-90°)
+Name[es]=Rotar (-90°)
+Name[et]=Pööra (-90°)
+Name[fi]=Kierrä (-90°)
+Name[fr]=Pivoter (-90°)
+Name[he]=סובב (-90°)
+Name[hr]=Rotiraj (-90°)
+Name[hu]=Forgatás (-90°)
+Name[is]=Snúa (-90°)
 Name[it]=Ruota di -90°
+Name[ja]=回転 (-90°)
+Name[ko]=회전 (-90°)
+Name[nl]=Draaien (-90°)
+Name[no]=Roter (-90°)
+Name[pl]=Obróć (-90°)
+Name[pt]=Girar (-90°)
+Name[ro]=Rotește (-90°)
+Name[ru]=Повернуть (-90°)
+Name[sk]=Otočiť (-90°)
+Name[sv]=Rotera (-90°)
+Name[tr]=Döndür (-90°)
+Name[uk]=Повернути (-90°)
+Name[zh]=旋转 (-90°)
+
 
 [Desktop Action rotate_custom]
 Exec=reimage-kdialog rotate custom %F
 Icon=view-refresh
 Name=Rotate custom
+Name[bg]=Завърти по избор
+Name[cs]=Vlastní otočení
+Name[da]=Tilpasset rotation
+Name[de]=Benutzerdefinierte Drehung
+Name[el]=Περιστροφή προσαρμοσμένη
+Name[es]=Rotar personalizado
+Name[et]=Kohandatud pööramine
+Name[fi]=Mukautettu kierto
+Name[fr]=Rotation personnalisée
+Name[he]=סיבוב מותאם אישית
+Name[hr]=Prilagođeno rotiranje
+Name[hu]=Egyéni forgatás
+Name[is]=Sérsniðin snúningur
 Name[it]=Angolo personalizzato
+Name[ja]=カスタム回転
+Name[ko]=맞춤 회전
+Name[nl]=Aangepaste rotatie
+Name[no]=Tilpasset rotasjon
+Name[pl]=Obrót niestandardowy
+Name[pt]=Rotação personalizada
+Name[ro]=Rotire personalizată
+Name[ru]=Пользовательское вращение
+Name[sk]=Vlastné otáčanie
+Name[sv]=Anpassad rotation
+Name[tr]=Özel döndürme
+Name[uk]=Користувацьке обертання
+Name[zh]=自定义旋转
+
 
 [Desktop Action auto]
 Exec=reimage-kdialog rotate auto %F
 Icon=view-refresh
 Name=Auto-rotate with Exif
+Name[bg]=Автоматично завъртане с Exif
+Name[cs]=Automatické otočení s Exifem
+Name[da]=Auto-roter med Exif
+Name[de]=Automatisch drehen mit Exif
+Name[el]=Αυτόματη περιστροφή με Exif
+Name[es]=Rotación automática con Exif
+Name[et]=Automaatne pööramine Exif-iga
+Name[fi]=Automaattinen kierto Exifin kanssa
+Name[fr]=Rotation automatique avec Exif
+Name[he]=סיבוב אוטומטי עם Exif
+Name[hr]=Automatsko rotiranje s Exifom
+Name[hu]=Automatikus forgatás Exif-fel
+Name[is]=Sjálfvirk snúningur með Exif
 Name[it]=Auto-ruota tramite dati Exif
+Name[ja]=Exifを使った自動回転
+Name[ko]=Exif로 자동 회전
+Name[nl]=Automatisch roteren met Exif
+Name[no]=Auto-roter med Exif
+Name[pl]=Automatyczne obracanie z Exif
+Name[pt]=Rotação automática com Exif
+Name[ro]=Rotație automată cu Exif
+Name[ru]=Автоповорот с Exif
+Name[sk]=Automatické otočenie s Exifom
+Name[sv]=Automatisk rotation med Exif
+Name[tr]=Exif ile otomatik döndürme
+Name[uk]=Автоматичне обертання з Exif
+Name[zh]=使用Exif自动旋转
+
 
 ################################################################################
 
@@ -156,10 +696,63 @@ Name[it]=Auto-ruota tramite dati Exif
 Exec=reimage-kdialog overturn flip %F
 Icon=image-flip-vertical-symbolic
 Name=Overturn vertically
+Name[bg]=Обръщане вертикално
+Name[cs]=Převrátit svisle
+Name[da]=Vend lodret
+Name[de]=Vertikal umdrehen
+Name[el]=Ανατροπή κάθετα
+Name[es]=Voltear verticalmente
+Name[et]=Pöörake vertikaalselt ümber
+Name[fi]=Käännä pystysuunnassa
+Name[fr]=Retourner verticalement
+Name[he]=הפוך אנכית
+Name[hr]=Preokrenuti okomito
+Name[hu]=Függőleges megfordítás
+Name[is]=Umbylta lóðrétt
 Name[it]=Ribalta verticalmente
+Name[ja]=垂直に反転
+Name[ko]=수직으로 뒤집기
+Name[nl]=Verticaal omkeren
+Name[no]=Velt loddrett
+Name[pl]=Odwróć pionowo
+Name[pt]=Virar verticalmente
+Name[ro]=Răsturnare verticală
+Name[ru]=Повернуть вертикально
+Name[sk]=Prevrátiť zvisle
+Name[sv]=Vänd vertikalt
+Name[tr]=Dikey olarak ters çevir
+Name[uk]=Перевернути вертикально
+Name[zh]=垂直翻转
+
 
 [Desktop Action flop]
 Exec=reimage-kdialog overturn flop %F
 Icon=image-flip-horizontal-symbolic
 Name=Overturn horizontally
+Name[bg]=Завъртане хоризонтално
+Name[cs]=Převrátit vodorovně
+Name[da]=Vend vandret
+Name[de]=Horizontal umdrehen
+Name[el]=Αναστροφή οριζόντια
+Name[es]=Voltear horizontalmente
+Name[et]=Horisontaalselt pöörama
+Name[fi]=Kääntäminen vaakasuunnassa
+Name[fr]=Retourner horizontalement
+Name[he]=הפוך אופקית
+Name[hr]=Preokrenuti vodoravno
+Name[hu]=Vízszintesen átfordít
+Name[is]=Velta lárétt
 Name[it]=Ribalta orizzontalmente
+Name[ja]=水平に反転
+Name[ko]=수평으로 뒤집기
+Name[nl]=Horizontaal omdraaien
+Name[no]=Vende horisontalt
+Name[pl]=Odwróć poziomo
+Name[pt]=Virar horizontalmente
+Name[ro]=Răsturnați orizontal
+Name[ru]=Перевернуть по горизонтали
+Name[sk]=Prevrátiť horizontálne
+Name[sv]=Vänd horisontellt
+Name[tr]=Yatay çevir
+Name[uk]=Перевернути горизонтально
+Name[zh]=水平翻转
