--- a/ServiceMenus/reimage-metadata.desktop
+++ b/ServiceMenus/reimage-metadata.desktop
@@ -26,7 +26,34 @@ Name=ReImage metadata service menu
 TryExec=reimage-kdialog
 Type=Service
 X-KDE-Submenu=ReImage - Metadata
+X-KDE-Submenu[bg]=ReImage - Метаданни
+X-KDE-Submenu[cs]=ReImage - Metadata
+X-KDE-Submenu[da]=ReImage - Metadata
+X-KDE-Submenu[de]=ReImage - Metadaten
+X-KDE-Submenu[el]=ReImage - Μεταδεδομένα
+X-KDE-Submenu[es]=ReImage - Metadatos
+X-KDE-Submenu[et]=ReImage - Metaandmed
+X-KDE-Submenu[fi]=ReImage - Metadata
+X-KDE-Submenu[fr]=ReImage - Métadonnées
+X-KDE-Submenu[he]=ReImage - מטא נתונים
+X-KDE-Submenu[hr]=ReImage - Metapodaci
+X-KDE-Submenu[hu]=ReImage - Metaadatok
+X-KDE-Submenu[is]=ReImage - Metadata
 X-KDE-Submenu[it]=ReImage - Metadati
+X-KDE-Submenu[ja]=ReImage - メタデータ
+X-KDE-Submenu[ko]=ReImage - 메타데이터
+X-KDE-Submenu[nl]=ReImage - Metadata
+X-KDE-Submenu[no]=ReImage - Metadata
+X-KDE-Submenu[pl]=ReImage - Metadane
+X-KDE-Submenu[pt]=ReImage - Metadados
+X-KDE-Submenu[ro]=ReImage - Metadate
+X-KDE-Submenu[ru]=ReImage - Метаданные
+X-KDE-Submenu[sk]=ReImage - Metadata
+X-KDE-Submenu[sv]=ReImage - Metadata
+X-KDE-Submenu[tr]=ReImage - Meta Veriler
+X-KDE-Submenu[uk]=ReImage - Метадані
+X-KDE-Submenu[zh]=ReImage - 元数据
+
 
 ################################################################################
 
@@ -34,13 +61,67 @@ X-KDE-Submenu[it]=ReImage - Metadati
 Exec=reimage-kdialog rfe %F
 Icon=edit-rename
 Name=Rename from Exif date
+Name[bg]=Преименуване от Exif дата
+Name[cs]=Přejmenovat podle Exif data
+Name[da]=Omdøb fra Exif-dato
+Name[de]=Umbenennen nach Exif-Datum
+Name[el]=Μετονομασία από ημερομηνία Exif
+Name[es]=Renombrar desde la fecha Exif
+Name[et]=Nimeta ümber Exif kuupäeva järgi
+Name[fi]=Nimeä uudelleen Exif-päivämäärän mukaan
+Name[fr]=Renommer d'après la date Exif
+Name[he]=שנה שם לפי תאריך Exif
+Name[hr]=Preimenuj prema Exif datumu
+Name[hu]=Átnevezés Exif dátum alapján
+Name[is]=Endurnefna frá Exif dagsetningu
 Name[it]=Rinomina dalla data Exif
+Name[ja]=Exif日付から名前を変更
+Name[ko]=Exif 날짜로 이름 변경
+Name[nl]=Hernoem op basis van Exif-datum
+Name[no]=Gi nytt navn fra Exif-dato
+Name[pl]=Zmień nazwę z daty Exif
+Name[pt]=Renomear pela data Exif
+Name[ro]=Redenumește după data Exif
+Name[ru]=Переименовать по дате Exif
+Name[sk]=Premenovať podľa Exif dátumu
+Name[sv]=Byt namn från Exif-datum
+Name[tr]=Exif tarihine göre yeniden adlandır
+Name[uk]=Перейменувати за датою Exif
+Name[zh]=根据 Exif 日期重命名
+
 
 [Desktop Action rff]
 Exec=reimage-kdialog rff %F
 Icon=edit-rename
 Name=Rename from file's date
+Name[bg]=Преименуване по дата на файла
+Name[cs]=Přejmenovat podle data souboru
+Name[da]=Omdøb fra filens dato
+Name[de]=Umbenennen nach Dateidatum
+Name[el]=Μετονομασία από την ημερομηνία αρχείου
+Name[es]=Renombrar según la fecha del archivo
+Name[et]=Nimeta ümber faili kuupäeva järgi
+Name[fi]=Nimeä uudelleen tiedoston päivämäärän mukaan
+Name[fr]=Renommer à partir de la date du fichier
+Name[he]=שנה שם לפי תאריך הקובץ
+Name[hr]=Preimenuj prema datumu datoteke
+Name[hu]=Átnevezés a fájl dátuma alapján
+Name[is]=Endurnefna frá dagsetningu skráar
 Name[it]=Rinomina dalla data del file
+Name[ja]=ファイルの日付から名前を変更
+Name[ko]=파일 날짜로 이름 변경
+Name[nl]=Hernoem op basis van de datum van het bestand
+Name[no]=Gi nytt navn fra filens dato
+Name[pl]=Zmień nazwę na podstawie daty pliku
+Name[pt]=Renomear pela data do arquivo
+Name[ro]=Redenumiți din data fișierului
+Name[ru]=Переименовать по дате файла
+Name[sk]=Premenovať podľa dátumu súboru
+Name[sv]=Byt namn från filens datum
+Name[tr]=Dosyanın tarihine göre yeniden adlandır
+Name[uk]=Перейменувати за датою файлу
+Name[zh]=按文件日期重命名
+
 
 ################################################################################
 
@@ -48,13 +129,67 @@ Name[it]=Rinomina dalla data del file
 Exec=reimage-kdialog sffe %F
 Icon=knotes_date
 Name=Set file date from Exif date
+Name[bg]=Задаване на дата на файла от Exif дата
+Name[cs]=Nastavit datum souboru z Exif data
+Name[da]=Indstil filens dato fra Exif-dato
+Name[de]=Dateidatum aus Exif-Datum setzen
+Name[el]=Ορισμός ημερομηνίας αρχείου από ημερομηνία Exif
+Name[es]=Establecer fecha del archivo desde la fecha Exif
+Name[et]=Määra faili kuupäev Exif kuupäeva järgi
+Name[fi]=Aseta tiedoston päivämäärä Exif-päivämäärästä
+Name[fr]=Définir la date du fichier à partir de la date Exif
+Name[he]=הגדר תאריך קובץ מתאריך Exif
+Name[hr]=Postavi datum datoteke iz Exif datuma
+Name[hu]=Fájl dátumának beállítása Exif dátum alapján
+Name[is]=Stilltu skráardag frá Exif dagsetningu
 Name[it]=Imposta la data del file a quella Exif
+Name[ja]=Exif日付からファイル日付を設定
+Name[ko]=Exif 날짜에서 파일 날짜 설정
+Name[nl]=Stel bestandsdatum in vanaf Exif-datum
+Name[no]=Angi filens dato fra Exif-dato
+Name[pl]=Ustaw datę pliku z daty Exif
+Name[pt]=Definir data do arquivo a partir da data Exif
+Name[ro]=Setează data fișierului din data Exif
+Name[ru]=Установить дату файла из даты Exif
+Name[sk]=Nastaviť dátum súboru z dátumu Exif
+Name[sv]=Ställ in filens datum från Exif-datum
+Name[tr]=Dosya tarihini Exif tarihinden ayarla
+Name[uk]=Встановити дату файлу з дати Exif
+Name[zh]=从Exif日期设置文件日期
+
 
 [Desktop Action sffn]
 Exec=reimage-kdialog sffn %F
 Icon=knotes_date
 Name=Set file date from file's name
+Name[bg]=Задайте дата на файла от името на файла
+Name[cs]=Nastavit datum souboru z názvu souboru
+Name[da]=Indstil filens dato fra filens navn
+Name[de]=Dateidatum aus Dateinamen setzen
+Name[el]=Ορισμός ημερομηνίας αρχείου από το όνομα αρχείου
+Name[es]=Establecer fecha de archivo desde el nombre del archivo
+Name[et]=Määrake faili kuupäev faili nimest
+Name[fi]=Aseta tiedoston päivämäärä tiedoston nimestä
+Name[fr]=Définir la date du fichier à partir du nom du fichier
+Name[he]=הגדרת תאריך הקובץ משם הקובץ
+Name[hr]=Postavi datum datoteke iz naziva datoteke
+Name[hu]=Fájl dátumának beállítása a fájl nevéből
+Name[is]=Setja skrárdag frá nafni skrárinnar
 Name[it]=Imposta la data del file a quella del nome
+Name[ja]=ファイル名からファイルの日付を設定
+Name[ko]=파일 이름에서 파일 날짜 설정
+Name[nl]=Bestandsdatum instellen vanuit bestandsnaam
+Name[no]=Sett filens dato fra filens navn
+Name[pl]=Ustaw datę pliku na podstawie nazwy pliku
+Name[pt]=Definir a data do arquivo a partir do nome do arquivo
+Name[ro]=Setați data fișierului din numele fișierului
+Name[ru]=Установить дату файла по имени файла
+Name[sk]=Nastaviť dátum súboru podľa názvu súboru
+Name[sv]=Ställ in filens datum från filnamnet
+Name[tr]=Dosya tarihini dosya adından ayarla
+Name[uk]=Встановити дату файлу за назвою файлу
+Name[zh]=从文件名设置文件日期
+
 
 ################################################################################
 
@@ -62,13 +197,67 @@ Name[it]=Imposta la data del file a quella del nome
 Exec=reimage-kdialog seff %F
 Icon=knotes_date
 Name=Set Exif date from file's date
+Name[bg]=Задаване на Exif дата от датата на файла
+Name[cs]=Nastavit datum Exif podle data souboru
+Name[da]=Indstil Exif-dato fra filens dato
+Name[de]=Exif-Datum aus Datei-Datum setzen
+Name[el]=Ορισμός ημερομηνίας Exif από την ημερομηνία του αρχείου
+Name[es]=Establecer la fecha Exif desde la fecha del archivo
+Name[et]=Määra Exif kuupäev faili kuupäevast
+Name[fi]=Aseta Exif-päivämäärä tiedoston päivämäärästä
+Name[fr]=Définir la date Exif à partir de la date du fichier
+Name[he]=הגדר תאריך Exif מתאריך הקובץ
+Name[hr]=Postavi Exif datum prema datumu datoteke
+Name[hu]=Exif dátum beállítása a fájl dátumából
+Name[is]=Setja Exif dagsetningu frá dagsetningu skrárinnar
 Name[it]=Imposta la data Exif a quella del file
+Name[ja]=ファイルの日付からExif日付を設定する
+Name[ko]=파일의 날짜에서 Exif 날짜 설정
+Name[nl]=Exif-datum instellen op basis van bestandsdatum
+Name[no]=Sett Exif-dato fra filens dato
+Name[pl]=Ustaw datę Exif z daty pliku
+Name[pt]=Definir a data Exif a partir da data do arquivo
+Name[ro]=Setează data Exif din data fișierului
+Name[ru]=Установить дату Exif по дате файла
+Name[sk]=Nastaviť dátum Exif podľa dátumu súboru
+Name[sv]=Ställ in Exif-datum från filens datum
+Name[tr]=Dosyanın tarihinden Exif tarihini ayarla
+Name[uk]=Встановити дату Exif за датою файлу
+Name[zh]=从文件日期设置 Exif 日期
+
 
 [Desktop Action sefn]
 Exec=reimage-kdialog sefn %F
 Icon=knotes_date
 Name=Set Exif date from file's name
+Name[bg]=Задайте Exif дата от името на файла
+Name[cs]=Nastavit datum Exif z názvu souboru
+Name[da]=Indstil Exif-dato fra filens navn
+Name[de]=Exif-Datum aus Dateinamen setzen
+Name[el]=Ορίστε την ημερομηνία Exif από το όνομα του αρχείου
+Name[es]=Establecer fecha Exif desde el nombre del archivo
+Name[et]=Määrake Exif kuupäev failinimest
+Name[fi]=Aseta Exif-päivämäärä tiedoston nimestä
+Name[fr]=Définir la date Exif à partir du nom du fichier
+Name[he]=הגדר תאריך Exif משם הקובץ
+Name[hr]=Postavite Exif datum iz naziva datoteke
+Name[hu]=Állítsa be az Exif dátumot a fájl nevéből
+Name[is]=Stilltu Exif dagsetningu úr nafni skráar
 Name[it]=Imposta la data Exif a quella del nome
+Name[ja]=ファイル名からExif日付を設定
+Name[ko]=파일 이름에서 Exif 날짜 설정
+Name[nl]=Exif-datum instellen vanuit bestandsnaam
+Name[no]=Angi Exif-dato fra filnavnet
+Name[pl]=Ustaw datę Exif z nazwy pliku
+Name[pt]=Definir data Exif a partir do nome do arquivo
+Name[ro]=Setați data Exif din numele fișierului
+Name[ru]=Установить дату Exif из имени файла
+Name[sk]=Nastaviť dátum Exif z názvu súboru
+Name[sv]=Ställ in Exif-datum från filens namn
+Name[tr]=Dosya adından Exif tarihini ayarlayın
+Name[uk]=Встановити дату Exif з імені файлу
+Name[zh]=从文件名设置 Exif 日期
+
 
 ################################################################################
 
@@ -76,19 +265,100 @@ Name[it]=Imposta la data Exif a quella del nome
 Exec=reimage-kdialog ac %F
 Icon=knotes_date
 Name=Add comment
+Name[bg]=Добавяне на коментар
+Name[cs]=Přidat komentář
+Name[da]=Tilføj kommentar
+Name[de]=Kommentar hinzufügen
+Name[el]=Προσθήκη σχολίου
+Name[es]=Añadir comentario
+Name[et]=Lisa kommentaar
+Name[fi]=Lisää kommentti
+Name[fr]=Ajouter un commentaire
+Name[he]=הוסף תגובה
+Name[hr]=Dodaj komentar
+Name[hu]=Megjegyzés hozzáadása
+Name[is]=Bæta við athugasemd
 Name[it]=Aggiungi un commento
+Name[ja]=コメントを追加
+Name[ko]=댓글 추가
+Name[nl]=Reactie toevoegen
+Name[no]=Legg til kommentar
+Name[pl]=Dodaj komentarz
+Name[pt]=Adicionar comentário
+Name[ro]=Adaugă comentariu
+Name[ru]=Добавить комментарий
+Name[sk]=Pridať komentár
+Name[sv]=Lägg till kommentar
+Name[tr]=Yorum ekle
+Name[uk]=Додати коментар
+Name[zh]=添加评论
+
 
 [Desktop Action view_metadata]
 Exec=reimage-kdialog ve %F
 Icon=knotes_date
 Name=View metadata
+Name[bg]=Преглед на метаданни
+Name[cs]=Zobrazit metadata
+Name[da]=Se metadata
+Name[de]=Metadaten anzeigen
+Name[el]=Προβολή μεταδεδομένων
+Name[es]=Ver metadatos
+Name[et]=Kuva metaandmeid
+Name[fi]=Näytä metadata
+Name[fr]=Voir les métadonnées
+Name[he]=הצגת מטא נתונים
+Name[hr]=Prikaži metapodatke
+Name[hu]=Metaadatok megtekintése
+Name[is]=Skoða lýsigögn
 Name[it]=Visualizza metadati
+Name[ja]=メタデータを表示
+Name[ko]=메타데이터 보기
+Name[nl]=Metadata bekijken
+Name[no]=Vis metadata
+Name[pl]=Wyświetl metadane
+Name[pt]=Ver metadados
+Name[ro]=Vizualizați metadate
+Name[ru]=Просмотр метаданных
+Name[sk]=Zobraziť metadata
+Name[sv]=Visa metadata
+Name[tr]=Meta verileri görüntüle
+Name[uk]=Переглянути метадані
+Name[zh]=查看元数据
+
 
 [Desktop Action extract_metadata]
 Exec=reimage-kdialog ee %F
 Icon=knotes_date
 Name=Extract metadata to file
+Name[bg]=Извличане на метаданни във файл
+Name[cs]=Extrahovat metadata do souboru
+Name[da]=Ekstraher metadata til fil
+Name[de]=Metadaten in Datei extrahieren
+Name[el]=Εξαγωγή μεταδεδομένων σε αρχείο
+Name[es]=Extraer metadatos a archivo
+Name[et]=Metaandmete ekstraheerimine faili
+Name[fi]=Vie metadata tiedostoon
+Name[fr]=Extraire les métadonnées dans un fichier
+Name[he]=חלץ מטא נתונים לקובץ
+Name[hr]=Izdvoji metapodatke u datoteku
+Name[hu]=Metaadatok kinyerése fájlba
+Name[is]=Draga fram lýsigögn í skrá
 Name[it]=Estrai metadati in un file
+Name[ja]=メタデータをファイルに抽出
+Name[ko]=메타데이터를 파일로 추출
+Name[nl]=Metadata naar bestand extraheren
+Name[no]=Ekstraher metadata til fil
+Name[pl]=Wyodrębnij metadane do pliku
+Name[pt]=Extrair metadados para arquivo
+Name[ro]=Extrage metadatele în fișier
+Name[ru]=Извлечь метаданные в файл
+Name[sk]=Extrahovať metaúdaje do súboru
+Name[sv]=Extrahera metadata till fil
+Name[tr]=Veri dosyasını çıkart
+Name[uk]=Витягти метадані у файл
+Name[zh]=将元数据提取到文件
+
 
 ################################################################################
 
@@ -96,31 +366,166 @@ Name[it]=Estrai metadati in un file
 Exec=reimage-kdialog dc %F
 Icon=knotes_date
 Name=Delete comment field
+Name[bg]=Изтрий полето за коментари във файла
+Name[cs]=Odstranit pole komentáře do souboru
+Name[da]=Slet kommentarfelt til fil
+Name[de]=Kommentar-Feld aus Datei löschen
+Name[el]=Διαγραφή πεδίου σχολίου στο αρχείο
+Name[es]=Eliminar campo de comentario en el archivo
+Name[et]=Kustuta kommentaariväli faili
+Name[fi]=Poista kommenttikenttä tiedostosta
+Name[fr]=Supprimer le champ de commentaire dans le fichier
+Name[he]=מחק את שדה ההערה לקובץ
+Name[hr]=Izbriši polje za komentar u datoteci
+Name[hu]=Megjegyzés mező törlése a fájlba
+Name[is]=Eyða athugasemdareit í skrá
 Name[it]=Cancella commento
+Name[ja]=ファイルにコメントフィールドを削除
+Name[ko]=파일에서 주석 필드 삭제
+Name[nl]=Verwijder commentaarveld naar bestand
+Name[no]=Slett kommentarfelt til fil
+Name[pl]=Usuń pole komentarza do pliku
+Name[pt]=Excluir campo de comentário no arquivo
+Name[ro]=Ștergeți câmpul de comentariu în fișier
+Name[ru]=Удалить поле комментария в файл
+Name[sk]=Odstrániť pole komentára do súboru
+Name[sv]=Ta bort kommentarfält till fil
+Name[tr]=Yorum alanını dosyaya sil
+Name[uk]=Видалити поле коментаря до файлу
+Name[zh]=删除文件中的注释字段
+
 
 [Desktop Action del_exif]
 Exec=reimage-kdialog de %F
 Icon=knotes_date
 Name=Strip Exif section
+Name[bg]=Премахване на Exif секция
+Name[cs]=Odstranit sekci Exif
+Name[da]=Fjern Exif-sektion
+Name[de]=Exif-Bereich entfernen
+Name[el]=Αφαίρεση ενότητας Exif
+Name[es]=Eliminar sección Exif
+Name[et]=Eemalda Exif-jaotis
+Name[fi]=Poista Exif-osa
+Name[fr]=Supprimer la section Exif
+Name[he]=הסר קטע Exif
+Name[hr]=Ukloni Exif sekciju
+Name[hu]=Exif szakasz eltávolítása
+Name[is]=Fjarlægja Exif hluta
 Name[it]=Cancella le informazioni Exif
+Name[ja]=Exifセクションを削除
+Name[ko]=Exif 섹션 제거
+Name[nl]=Exif-sectie verwijderen
+Name[no]=Fjern Exif-seksjon
+Name[pl]=Usuń sekcję Exif
+Name[pt]=Remover seção Exif
+Name[ro]=Șterge secțiunea Exif
+Name[ru]=Удалить раздел Exif
+Name[sk]=Odstrániť sekciu Exif
+Name[sv]=Ta bort Exif-avsnittet
+Name[tr]=Exif bölümünü çıkar
+Name[uk]=Видалити секцію Exif
+Name[zh]=删除 Exif 部分
+
 
 [Desktop Action del_iptc]
 Exec=reimage-kdialog di %F
 Icon=knotes_date
 Name=Delete IPTC section
+Name[bg]=Изтрийте раздела IPTC
+Name[cs]=Odstranit sekci IPTC
+Name[da]=Slet IPTC-sektionen
+Name[de]=IPTC-Bereich löschen
+Name[el]=Διαγραφή ενότητας IPTC
+Name[es]=Eliminar sección IPTC
+Name[et]=Kustuta IPTC jaotis
+Name[fi]=Poista IPTC-osio
+Name[fr]=Supprimer la section IPTC
+Name[he]=מחק את סעיף IPTC
+Name[hr]=Izbriši IPTC odjeljak
+Name[hu]=IPTC szakasz törlése
+Name[is]=Eyða IPTC kafla
 Name[it]=Cancella le informazioni IPTC
+Name[ja]=IPTCセクションを削除
+Name[ko]=IPTC 섹션 삭제
+Name[nl]=Verwijder IPTC-sectie
+Name[no]=Slett IPTC-seksjon
+Name[pl]=Usuń sekcję IPTC
+Name[pt]=Excluir seção IPTC
+Name[ro]=Ștergeți secțiunea IPTC
+Name[ru]=Удалить раздел IPTC
+Name[sk]=Odstrániť sekciu IPTC
+Name[sv]=Ta bort IPTC-sektionen
+Name[tr]=IPTC bölümünü sil
+Name[uk]=Видалити розділ IPTC
+Name[zh]=删除 IPTC 部分
+
 
 [Desktop Action del_xmp]
 Exec=reimage-kdialog dx %F
 Icon=knotes_date
 Name=Delete XMP section
+Name[bg]=Изтриване на секция XMP
+Name[cs]=Smazat sekci XMP
+Name[da]=Slet XMP-sektion
+Name[de]=XMP-Bereich löschen
+Name[el]=Διαγραφή ενότητας XMP
+Name[es]=Eliminar sección XMP
+Name[et]=Kustuta XMP-sektsioon
+Name[fi]=Poista XMP-osio
+Name[fr]=Supprimer la section XMP
+Name[he]=מחק קטע XMP
+Name[hr]=Izbriši XMP sekciju
+Name[hu]=XMP szakasz törlése
+Name[is]=Eyða XMP hluta
 Name[it]=Cancella le informazioni XMP
+Name[ja]=XMPセクションを削除
+Name[ko]=XMP 섹션 삭제
+Name[nl]=XMP-sectie verwijderen
+Name[no]=Slett XMP-seksjon
+Name[pl]=Usuń sekcję XMP
+Name[pt]=Excluir seção XMP
+Name[ro]=Șterge secțiunea XMP
+Name[ru]=Удалить раздел XMP
+Name[sk]=Odstrániť sekciu XMP
+Name[sv]=Ta bort XMP-sektionen
+Name[tr]=XMP bölümünü sil
+Name[uk]=Видалити секцію XMP
+Name[zh]=删除 XMP 部分
+
 
 [Desktop Action del_all]
 Exec=reimage-kdialog purejpg %F
 Icon=knotes_date
 Name=Strip all unnecessary data
+Name[bg]=Премахване на всички ненужни данни
+Name[cs]=Odstranit všechna zbytečná data
+Name[da]=Fjern alle unødvendige data
+Name[de]=Alle unnötigen Daten entfernen
+Name[el]=Αφαίρεση όλων των περιττών δεδομένων
+Name[es]=Eliminar todos los datos innecesarios
+Name[et]=Eemalda kõik mittevajalikud andmed
+Name[fi]=Poista kaikki tarpeettomat tiedot
+Name[fr]=Supprimer toutes les données inutiles
+Name[he]=הסר את כל הנתונים המיותרים
+Name[hr]=Ukloni sve nepotrebne podatke
+Name[hu]=Minden felesleges adat eltávolítása
+Name[is]=Fjarlægja öll óþörf gögn
 Name[it]=Cancella tutti i metadati
+Name[ja]=不要なデータをすべて削除
+Name[ko]=불필요한 데이터를 모두 제거
+Name[nl]=Alle onnodige gegevens verwijderen
+Name[no]=Fjern alle unødvendige data
+Name[pl]=Usuń wszystkie niepotrzebne dane
+Name[pt]=Remover todos os dados desnecessários
+Name[ro]=Șterge toate datele inutile
+Name[ru]=Удалить все ненужные данные
+Name[sk]=Odstrániť všetky nepotrebné údaje
+Name[sv]=Ta bort all onödig data
+Name[tr]=Gereksiz verilerin tümünü kaldır
+Name[uk]=Видалити всі непотрібні дані
+Name[zh]=删除所有不必要的数据
+
 
 ################################################################################
 
@@ -128,4 +533,30 @@ Name[it]=Cancella tutti i metadati
 Exec=reimage-kdialog timestamp %F
 Icon=knotes_date
 Name=Add timestamp from Exif
+Name[bg]=Добавяне на времеви печат от Exif
+Name[cs]=Přidat časové razítko z Exif
+Name[da]=Tilføj tidsstempel fra Exif
+Name[de]=Zeitstempel aus Exif hinzufügen
+Name[el]=Προσθήκη χρονικής σήμανσης από Exif
+Name[es]=Agregar marca de tiempo desde Exif
+Name[et]=Lisa ajatempel Exifist
+Name[fi]=Lisää aikaleima Exifistä
+Name[fr]=Ajouter un horodatage depuis Exif
+Name[he]=הוסף תאריך/שעה מ-Exif
+Name[hr]=Dodaj vremenski žig iz Exif
+Name[hu]=Időbélyeg hozzáadása Exif-ből
+Name[is]=Bæta við tímamerki úr Exif
 Name[it]=Aggiungi timestamp da Exif
+Name[ja]=Exifからタイムスタンプを追加
+Name[ko]=Exif에서 타임스탬프 추가
+Name[nl]=Voeg tijdstempel toe van Exif
+Name[no]=Legg til tidsstempel fra Exif
+Name[pl]=Dodaj znacznik czasu z Exif
+Name[pt]=Adicionar carimbo de data/hora do Exif
+Name[ro]=Adăugați marcaj temporal din Exif
+Name[ru]=Добавить временную метку из Exif
+Name[sk]=Pridať časovú pečiatku z Exif
+Name[sv]=Lägg till tidsstämpel från Exif
+Name[tr]=Exif'ten zaman damgası ekle
+Name[uk]=Додати позначку часу з Exif
+Name[zh]=从Exif添加时间戳
