--- a/ServiceMenus/reimage-tools.desktop
+++ b/ServiceMenus/reimage-tools.desktop
@@ -26,7 +26,33 @@ Name=ReImage tools service menu
 TryExec=reimage-kdialog
 Type=Service
 X-KDE-Submenu=ReImage - Tools
+X-KDE-Submenu[bg]=ReImage - Инструменти
+X-KDE-Submenu[cs]=ReImage - Nástroje
+X-KDE-Submenu[da]=ReImage - Værktøjer
+X-KDE-Submenu[de]=ReImage - Werkzeuge
+X-KDE-Submenu[el]=ReImage - Εργαλεία
+X-KDE-Submenu[es]=ReImage - Herramientas
+X-KDE-Submenu[et]=ReImage - Tööriistad
+X-KDE-Submenu[fi]=ReImage - Työkalut
+X-KDE-Submenu[fr]=ReImage - Outils
+X-KDE-Submenu[he]=ReImage - כלים
+X-KDE-Submenu[hr]=ReImage - Alati
+X-KDE-Submenu[hu]=ReImage - Eszközök
+X-KDE-Submenu[is]=ReImage - Verkfæri
 X-KDE-Submenu[it]=ReImage - Utilità
+X-KDE-Submenu[ja]=ReImage - ツール
+X-KDE-Submenu[ko]=ReImage - 도구
+X-KDE-Submenu[nl]=ReImage - Hulpmiddelen
+X-KDE-Submenu[no]=ReImage - Verktøy
+X-KDE-Submenu[pl]=ReImage - Narzędzia
+X-KDE-Submenu[pt]=ReImage - Ferramentas
+X-KDE-Submenu[ro]=ReImage - Instrumente
+X-KDE-Submenu[ru]=ReImage - Инструменты
+X-KDE-Submenu[sk]=ReImage - Nástroje
+X-KDE-Submenu[sv]=ReImage - Verktyg
+X-KDE-Submenu[tr]=ReImage - Araçlar
+X-KDE-Submenu[uk]=ReImage - Інструменти
+X-KDE-Submenu[zh]=ReImage - 工具
 
 ################################################################################
 
@@ -34,13 +60,66 @@ X-KDE-Submenu[it]=ReImage - Utilità
 Exec=reimage-kdialog agif %F
 Icon=video-x-mp4
 Name=Create animated GIF
+Name[bg]=Създаване на анимиран GIF
+Name[cs]=Vytvořit animovaný GIF
+Name[da]=Opret animeret GIF
+Name[de]=Animiertes GIF erstellen
+Name[el]=Δημιουργία κινούμενου GIF
+Name[es]=Crear GIF animado
+Name[et]=Loo animeeritud GIF
+Name[fi]=Luo animoitu GIF
+Name[fr]=Créer un GIF animé
+Name[he]=יצירת GIF מונפש
+Name[hr]=Stvori animirani GIF
+Name[hu]=Animált GIF létrehozása
+Name[is]=Búa til hreyfimynd
 Name[it]=Crea GIF
+Name[ja]=アニメーションGIFを作成
+Name[ko]=애니메이션 GIF 만들기
+Name[nl]=Geanimeerde GIF maken
+Name[no]=Lag animert GIF
+Name[pl]=Utwórz animowany GIF
+Name[pt]=Criar GIF animado
+Name[ro]=Creează GIF animat
+Name[ru]=Создать анимированный GIF
+Name[sk]=Vytvoriť animovaný GIF
+Name[sv]=Skapa animerad GIF
+Name[tr]=Animasyonlu GIF oluştur
+Name[uk]=Створити анімований GIF
+Name[zh]=创建动画 GIF
 
 [Desktop Action apng]
 Exec=reimage-kdialog apng %F
 Icon=video-x-mp4
 Name=Create animated PNG
+Name[bg]=Създаване на анимиран PNG
+Name[cs]=Vytvořit animovaný PNG
+Name[da]=Opret animeret PNG
+Name[de]=Animiertes PNG erstellen
+Name[el]=Δημιουργία κινούμενου PNG
+Name[es]=Crear PNG animado
+Name[et]=Loo animeeritud PNG
+Name[fi]=Luo animoitu PNG
+Name[fr]=Créer un PNG animé
+Name[he]=יצירת PNG מונפש
+Name[hr]=Stvori animirani PNG
+Name[hu]=Animált PNG létrehozása
+Name[is]=Búa til hreyfimynd PNG
 Name[it]=Crea PNG animata
+Name[ja]=アニメーションPNGを作成
+Name[ko]=애니메이션 PNG 만들기
+Name[nl]=Geanimeerde PNG maken
+Name[no]=Lag animert PNG
+Name[pl]=Utwórz animowany PNG
+Name[pt]=Criar PNG animado
+Name[ro]=Creează PNG animat
+Name[ru]=Создать анимированный PNG
+Name[sk]=Vytvoriť animovaný PNG
+Name[sv]=Skapa animerad PNG
+Name[tr]=Animasyonlu PNG oluştur
+Name[uk]=Створити анімований PNG
+Name[zh]=创建动画 PNG
+
 
 # [Desktop Action avif]
 # Exec=reimage-kdialog avif %F
@@ -64,13 +143,67 @@ Name[it]=Crea PNG animata
 Exec=reimage-kdialog webp %F
 Icon=video-x-mp4
 Name=Create animated WEBP
+Name[bg]=Създаване на анимиран WEBP
+Name[cs]=Vytvořit animovaný WEBP
+Name[da]=Opret animeret WEBP
+Name[de]=Animiertes WEBP erstellen
+Name[el]=Δημιουργία κινούμενου WEBP
+Name[es]=Crear WEBP animado
+Name[et]=Loo animeeritud WEBP
+Name[fi]=Luo animoitu WEBP
+Name[fr]=Créer un WEBP animé
+Name[he]=יצירת WEBP מונפש
+Name[hr]=Stvori animirani WEBP
+Name[hu]=Animált WEBP létrehozása
+Name[is]=Búa til hreyfimynd WEBP
 Name[it]=Crea WEBP animata
+Name[ja]=アニメーションWEBPを作成
+Name[ko]=애니메이션 WEBP 만들기
+Name[nl]=Geanimeerde WEBP maken
+Name[no]=Lag animert WEBP
+Name[pl]=Utwórz animowany WEBP
+Name[pt]=Criar WEBP animado
+Name[ro]=Creează WEBP animat
+Name[ru]=Создать анимированный WEBP
+Name[sk]=Vytvoriť animovaný WEBP
+Name[sv]=Skapa animerad WEBP
+Name[tr]=Animasyonlu WEBP oluştur
+Name[uk]=Створити анімований WEBP
+Name[zh]=创建动画 WEBP
+
 
 [Desktop Action append_right]
 Exec=reimage-kdialog montage %F
 Icon=image-flip-horizontal-symbolic
 Name=Append to right
+Name[bg]=Добави вдясно
+Name[cs]=Připojit doprava
+Name[da]=Tilføj til højre
+Name[de]=Rechts anhängen
+Name[el]=Προσθήκη δεξιά
+Name[es]=Añadir a la derecha
+Name[et]=Lisa paremale
+Name[fi]=Liitä oikealle
+Name[fr]=Ajouter à droite
+Name[he]=הוסף לימין
+Name[hr]=Dodaj desno
+Name[hu]=Hozzáadás jobbra
+Name[is]=Bæta við hægri
 Name[it]=Appendi immagine a destra
+Name[ja]=右に追加
+Name[ko]=오른쪽에 추가
+Name[nl]=Naar rechts toevoegen
+Name[no]=Legg til høyre
+Name[pl]=Dodaj do prawej
+Name[pt]=Adicionar à direita
+Name[ro]=Adaugă la dreapta
+Name[ru]=Добавить направо
+Name[sk]=Pripojiť doprava
+Name[sv]=Lägg till höger
+Name[tr]=Sağa ekle
+Name[uk]=Додати праворуч
+Name[zh]=向右追加
+
 
 ################################################################################
 
@@ -78,19 +211,100 @@ Name[it]=Appendi immagine a destra
 Exec=reimage-kdialog colorspace gray %F
 Icon=viewimage
 Name=GrayScale
+Name[bg]=Сива скала
+Name[cs]=Stupně šedi
+Name[da]=Gråtoner
+Name[de]=Graustufen
+Name[el]=Αποχρώσεις του γκρι
+Name[es]=Escala de grises
+Name[et]=Halltoonid
+Name[fi]=Harmaasävy
+Name[fr]=Niveaux de gris
+Name[he]=גווני אפור
+Name[hr]=Siva skala
+Name[hu]=Szürkeárnyalat
+Name[is]=Grátónar
 Name[it]=Scala di grigi
+Name[ja]=グレースケール
+Name[ko]=회색조
+Name[nl]=Grijstinten
+Name[no]=Gråtoner
+Name[pl]=Skala szarości
+Name[pt]=Escala de cinza
+Name[ro]=Scară de griuri
+Name[ru]=Оттенки серого
+Name[sk]=Odtiene sivej
+Name[sv]=Gråskala
+Name[tr]=Gri tonlama
+Name[uk]=Відтінки сірого
+Name[zh]=灰度
+
 
 [Desktop Action sepia]
 Exec=reimage-kdialog sepia 80% %F
 Icon=color-management
 Name=Sepia
+Name[bg]=Сепия
+Name[cs]=Sépiový
+Name[da]=Sepia
+Name[de]=Sepia
+Name[el]=Σέπια
+Name[es]=Sepia
+Name[et]=Seepia
+Name[fi]=Sepia
+Name[fr]=Sépia
+Name[he]=ספיה
+Name[hr]=Sepija
+Name[hu]=Szeppia
+Name[is]=Sépía
 Name[it]=Seppia
+Name[ja]=セピア
+Name[ko]=세피아
+Name[nl]=Sepia
+Name[no]=Sepia
+Name[pl]=Sepia
+Name[pt]=Sépia
+Name[ro]=Sepia
+Name[ru]=Сепия
+Name[sk]=Sépiový
+Name[sv]=Sepia
+Name[tr]=Sepya
+Name[uk]=Сепія
+Name[zh]=棕褐色
+
 
 [Desktop Action transparent2color]
 Exec=reimage-kdialog transparent2color %F
 Icon=backgroundtool
 Name=Change transparent to color
+Name[bg]=Промяна на прозрачността в цвят
+Name[cs]=Změnit průhlednost na barvu
+Name[da]=Skift gennemsigtighed til farve
+Name[de]=Transparenz in Farbe ändern
+Name[el]=Αλλαγή διαφάνειας σε χρώμα
+Name[es]=Cambiar transparencia a color
+Name[et]=Muuda läbipaistev värviks
+Name[fi]=Vaihda läpinäkyvyys väriin
+Name[fr]=Changer la transparence en couleur
+Name[he]=שנה שקיפות לצבע
+Name[hr]=Promijeni prozirnost u boju
+Name[hu]=Átlátszóság színre változtatása
+Name[is]=Breyta gagnsæi í lit
 Name[it]=Cambia trasparenza a colore
+Name[ja]=透明から色に変更
+Name[ko]=투명색을 색으로 변경
+Name[nl]=Transparantie naar kleur veranderen
+Name[no]=Endre gjennomsiktighet til farge
+Name[pl]=Zmień przezroczystość na kolor
+Name[pt]=Mudar transparência para cor
+Name[ro]=Schimbă transparența în culoare
+Name[ru]=Изменить прозрачность на цвет
+Name[sk]=Zmeniť priehľadnosť na farbu
+Name[sv]=Ändra transparens till färg
+Name[tr]=Şeffaflığı renge değiştir
+Name[uk]=Змінити прозорість на колір
+Name[zh]=将透明改为颜色
+
 
 ################################################################################
 
@@ -98,16 +312,96 @@ Name[it]=Cambia trasparenza a colore
 Exec=reimage-kdialog border custom %F
 Icon=bordertool
 Name=Add colored border
+Name[bg]=Добавяне на цветна граница
+Name[cs]=Přidat barevný okraj
+Name[da]=Tilføj farvet kant
+Name[de]=Farbig umrandet hinzufügen
+Name[el]=Προσθήκη χρωματιστού περιγράμματος
+Name[es]=Agregar borde de color
+Name[et]=Lisa värviline ääris
+Name[fi]=Lisää värillinen reuna
+Name[fr]=Ajouter une bordure colorée
+Name[he]=הוסף גבול צבעוני
+Name[hr]=Dodaj obojeni rub
+Name[hu]=Színes szegély hozzáadása
+Name[is]=Bæta við lituðum ramma
 Name[it]=Aggiungi bordo colorato
+Name[ja]=色付きの境界線を追加
+Name[ko]=색상 테두리 추가
+Name[nl]=Voeg gekleurde rand toe
+Name[no]=Legg til farget kant
+Name[pl]=Dodaj kolorową obwódkę
+Name[pt]=Adicionar borda colorida
+Name[ro]=Adaugă chenar colorat
+Name[ru]=Добавить цветную границу
+Name[sk]=Pridať farebný okraj
+Name[sv]=Lägg till färgad kant
+Name[tr]=Renkli kenarlık ekle
+Name[uk]=Додати кольоровий кордон
+Name[zh]=添加彩色边框
+
 
 [Desktop Action border_transparent]
 Exec=reimage-kdialog border transparent %F
 Icon=box
 Name=Add transparent border
+Name[bg]=Добавяне на прозрачен кант
+Name[cs]=Přidat průhledný okraj
+Name[da]=Tilføj gennemsigtig kant
+Name[de]=Transparente Umrandung hinzufügen
+Name[el]=Προσθήκη διαφανούς περιγράμματος
+Name[es]=Agregar borde transparente
+Name[et]=Lisa läbipaistev ääris
+Name[fi]=Lisää läpinäkyvä reunus
+Name[fr]=Ajouter une bordure transparente
+Name[he]=הוסף גבול שקוף
+Name[hr]=Dodaj prozirni rub
+Name[hu]=Átlátszó szegély hozzáadása
+Name[is]=Bæta við gegnsæjum ramma
 Name[it]=Aggiungi bordo trasparente
+Name[ja]=透明な境界線を追加
+Name[ko]=투명한 테두리 추가
+Name[nl]=Transparante rand toevoegen
+Name[no]=Legg til gjennomsiktig kant
+Name[pl]=Dodaj przezroczystą obwódkę
+Name[pt]=Adicionar borda transparente
+Name[ro]=Adăugați chenar transparent
+Name[ru]=Добавить прозрачную границу
+Name[sk]=Pridať priehľadný okraj
+Name[sv]=Lägg till genomskinlig kant
+Name[tr]=Şeffaf kenarlık ekle
+Name[uk]=Додати прозорий кордон
+Name[zh]=添加透明边框
+
 
 [Desktop Action shadow]
 Exec=reimage-kdialog shadow %F
 Icon=bwtonal
 Name=Drop shadow
+Name[bg]=Пусни сянка
+Name[cs]=Upustit stín
+Name[da]=Kast skygge
+Name[de]=Schatten werfen
+Name[el]=Ρίξε σκιά
+Name[es]=Añadir sombra
+Name[et]=Viska vari
+Name[fi]=Heitä varjo
+Name[fr]=Ajouter une ombre
+Name[he]=הוסף צל
+Name[hr]=Baci sjenu
+Name[hu]=Árnyékot vet
+Name[is]=Fella skugga
 Name[it]=Aggiungi ombra
+Name[ja]=影を落とす
+Name[ko]=그림자 추가
+Name[nl]=Schaduw werpen
+Name[no]=Legg til skygge
+Name[pl]=Dodaj cień
+Name[pt]=Adicionar sombra
+Name[ro]=Adaugă umbră
+Name[ru]=Добавить тень
+Name[sk]=Hodiť tieň
+Name[sv]=Släpp skugga
+Name[tr]=Gölge düşür
+Name[uk]=Додати тінь
+Name[zh]=投下阴影
